@@ -1970,13 +1970,7 @@ extern void iconv_wcstombs (object encoding, object stream, const chart* *srcp,
 extern object iconv_range (object encoding, uintL start, uintL end,
                            uintL maxintervals);
 
-#endif /* HAVE_GOOD_ICONV */
-
 #if defined(GNU_LIBICONV) || (__GLIBC__ > 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2))
-
-#ifndef HAVE_GOOD_ICONV
-#error HAVE_GOOD_ICONV should be defined in this configuration!
-#endif
 
 #ifdef GNU_LIBICONV
 #define iconv_first_sym  S(koi8_ru)
@@ -1989,6 +1983,8 @@ extern object iconv_range (object encoding, uintL start, uintL end,
 #endif
 
 #endif
+
+#endif /* HAVE_GOOD_ICONV */
 
 /* ----------------------------------------------------------------------- */
 
@@ -2470,7 +2466,7 @@ global void init_encodings_2 (void) {
   define_constant(S(windows_1254),Symbol_value(S(cp1254)));
   define_constant(S(windows_1256),Symbol_value(S(cp1256)));
   define_constant(S(windows_1257),Symbol_value(S(cp1257)));
- #if defined(GNU_LIBICONV) || (__GLIBC__ > 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2))
+ #if defined(HAVE_GOOD_ICONV) && (defined(GNU_LIBICONV) || (__GLIBC__ > 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2)))
   {
     var object symbol = iconv_first_sym;
     var uintC count = iconv_num_encodings;
